--- a/styles/Navbar.css
+++ b/styles/Navbar.css
@@ -31,7 +31,7 @@
     margin: 0.5em 0;
   }
 
-  .nav__hamburger {
+  .app .nav__hamburger {
     display: flex;
     z-index: 2;
     margin-left: 0.8em;
