--- a/styles/App.css
+++ b/styles/App.css
@@ -67,8 +67,7 @@ main {
   transition: width 0.2s ease-in;
 }
 
-.link:hover::before,
-.link:focus::before {
+.link:hover::before {
   width: 100%;
 }
 
@@ -98,8 +97,7 @@ main {
   z-index: 1;
 }
 
-.btn--outline:hover,
-.btn--outline:focus {
+.btn--outline:hover {
   color: var(--clr-bg);
   background-color: var(--clr-primary);
   transition: 0.2s ease-in-out;
